make vscode debugging possible

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,7 @@
 ROCKET_DATABASES={argent={url="postgres://argent:password@db/argent" }}
-ARGENT_AUTH={"jwtKey": "supersecret", "secureCookie": false, "cookieName": "argent-dev" }
-ARGENT_DEBUG=true
+ARGENT_AUTH_CONF={"jwtKey": "supersecret", "secureCookie": false, "cookieName": "argent-dev" }
+ARGENT_IS_DEBUG=true
 PORT=8008
 ROCKET_LOG_LEVEL=normal
 ROCKET_ADDRESS=0.0.0.0
+ 
